# stock-analysis

./: .dockerignore  .env.example  .gitignore  AI_ANALYSIS_TROUBLESHOOTING.md  AI_LAB_IMPLEMENTATION.md  AI_LAB_QUICKSTART.md  AI_STRATEGY_PROMPT.md  AI_STRATEGY_QUICKSTART.md  ALPHA_FACTORS_OPTIMIZATION_REPORT.md  ALPHA_FACTORS_QUICKSTART.md  ALPHA_FACTORS_REFACTORING_SUMMARY.md  API_USAGE_POOLED_TRAINING.md  CLAUDE.md  FINAL_AUDIT_REPORT.md  MODEL_TRAINER_REFACTORING.md  MODULARIZATION_feature_strategy.md  NOTIFICATION_FRONTEND_IMPLEMENTATION_PROMPT.md  OPTIMIZATION_v2_feature_strategy.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  POOLED_TRAINING_FIX.md  PREMARKET_COMPLETION_SUMMARY.md  PREMARKET_IMPLEMENTATION_GUIDE.md  PREMARKET_QUICK_START.md  PREMARKET_SYSTEM.md  QUICKSTART.md  README.md  REFACTOR_SUMMARY_feature_strategy.md  SYNC_SERVICE_REFACTOR_PLAN.md  TUSHARE_DATA_SYNC_PLAN.md  claude.md  dev-start.sh  docker-compose.dev.yml  docker-compose.yml  requirements.txt  start-admin.sh  start_jupyter.sh  test_model_trainer_refactor.py
core/: .gitignore  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  CONFIG_MIGRATION_GUIDE.md  DEVELOPMENT_ROADMAP.md  PIPELINE_REFACTORING_REPORT.md  README.md  RESPONSE_MIGRATION_ANALYSIS.md  TASK_3.6_MIGRATION_SUMMARY.md  pyproject.toml  pytest.ini  setup.py  test_config.py
core/docs/: BACKTEST_USAGE_GUIDE.md  CLI_GUIDE.md  DATA_QUALITY_GUIDE.md  ENSEMBLE_GUIDE.md  FACTOR_ANALYSIS_GUIDE.md  FEATURE_CONFIG_GUIDE.md  ML2_MULTI_FACTOR_WEIGHTED_IMPLEMENTATION.md  ML2_TEST_FIX_NOTES.md  (+11 more)
core/docs-backup/: CORE_SYSTEM_GUIDE.md
(+2617 files in other folders)
