[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analysis-core"
version = "2.0.0"
description = "A股AI量化交易系统 - 核心模块"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Note: pytest配置已迁移到pytest.ini文件
# 不要在这里重复定义pytest配置，否则会产生警告
